@@ -4,11 +4,34 @@
 # Licence GPL v3
 
 
-canProcessInMemory <- function(x, n=4) {
+.RAMavailable <- function(defmem=.maxmemory(), useC=TRUE) {
+	if (useC) {
+		memavail <- .availableRAM(defmem)
+	} else {
+		# essentially the same results as above, but slower
+		
+		if ( .Platform$OS.type == "windows" ) {
+			mem <- system2("wmic", args = "OS get FreePhysicalMemory /Value", stdout = TRUE)
+			mem3 <- gsub("\r", "", mem[3])
+			mem3 <- gsub("FreePhysicalMemory=", "", mem3)
+			memavail <- as.numeric(mem3) * 1024
+			#memavail <- 0.5 * (utils::memory.size(NA) - utils::memory.size(FALSE))
+		} else if ( .Platform$OS.type == "unix" ) {
+			memavail <- as.numeric(system("awk '/MemFree/ {print $2}' /proc/meminfo", intern=TRUE))
+		} else {
+			#don't know how to do it for mac
+			memavail <- defmem
+		}
+	}
+	memavail
+
+}
 
 
-# for testing purposes	
-#	rasterOptions(format='GTiff') 
+canProcessInMemory <- function(x, n=4, verbose=FALSE) {
+
+# for testing purposes
+#	rasterOptions(format='GTiff')
 #	requireNamespace("ncdf4")
 #	requireNamespace("rgdal")
 #	rasterOptions(format='big.matrix')
@@ -16,50 +39,34 @@ canProcessInMemory <- function(x, n=4) {
 #	rasterOptions(overwrite=TRUE)
 #  rasterOptions(todisk=TRUE)
 #  return(FALSE)
-	if (.toDisk()) { 
-		return(FALSE) 
-	} 
-	
-	n <- n + nlayers(x)
-	memneed <- ncell(x) * n * 8
-	
-	if (.estimateMem()) {
-	
-		if ( .Platform$OS.type == "windows" ) {
-		
-			mem <- system2("wmic", args = "OS get FreePhysicalMemory /Value", stdout = TRUE)
-			mem3 <- gsub("\r", "", mem[3])
-			mem3 <- gsub("FreePhysicalMemory=", "", mem3)
-			memavail <- as.numeric(mem3)
-
-			#memavail <- 0.5 * (utils::memory.size(NA) - utils::memory.size(FALSE))
-		} else { #if ( .Platform$OS.type == "unix" ) {
-			memavail <- as.numeric(system("awk '/MemFree/ {print $2}' /proc/meminfo", intern=TRUE))
-		} #else {
-			# mac? or is that also "unix"
-		#}
-
-		# can't use all of it
-		memavail <- 0.75 * memavail
-		
-		#print(paste("mem available:", memavail))
-		#print(paste("mem needed:", memneed))
-
-	
-		if (memneed > memavail) {
-			# options(rasterChunkSize = memavail * 0.5 )
-			return(FALSE)
-		} else {
-			return(TRUE)
-		}
-	
-	} else {
-		
-		if ( memneed > .maxmemory() ) {
-			return(FALSE) 
-		} else {
-			return(TRUE)
-		}
+	if (.toDisk()) {
+		return(FALSE)
 	}
+
+	n <- n * nlayers(x)
+	memneed <- ncell(x) * n * 8
+
+	maxmem <- .maxmemory()
+	memavail <- .RAMavailable(maxmem, TRUE)
+	if (verbose) {
+		print(paste("mem available:", memavail))
+		print(paste("mem needed:", memneed))
+	}
+	# the below should not be needed, but
+	# this allows you to safely set a high maxmem
+	# but still limit total mem use
+	memavail <- min(memavail, maxmem)
+
+	# can't use all of it; the 0.6 could be an option
+	memavail <- 0.6 * memavail
+
+	if (memneed > memavail) {
+		# new (hidden) option; the 0.25 could be another option
+		options(rasterChunk = min(.chunksize(), memavail * 0.25))
+		return(FALSE)
+	} else {
+		return(TRUE)
+	}
+
 }
 
