@@ -1,0 +1,22 @@
+# raster
+
+This is the source code for the R package "raster". Released versions are on [CRAN](https://cran.r-project.org/web/packages/raster/index.html).
+
+To install the development version you can do:
+
+```r
+library(devtools)
+install_github("rspatial/raster")
+```
+
+If you are on Windows, you need to first install [Rtools](https://cran.r-project.org/bin/windows/Rtools/) to get a C++ compiler that R can use. 
+
+If that is a problem, you may be able to get a recent version from [R-Forge](https://r-forge.r-project.org/R/?group_id=294) with this command `install.packages("raster", repos="http://R-Forge.R-project.org")`.
+
+On [rspatial.org](http://rspatial.org/) you can learn about spatial data analysis with R.
+
+[stackoverflow](https://stackoverflow.com/) is the best place to ask questions if you get stuck.
+Make sure to include a [simple reproducible example](https://stackoverflow.com/questions/5963269/how-to-make-a-great-r-reproducible-example). 
+
+Please send me an email if you have a bug report. See `maintainer("raster")` for the email address; or you can file an [issue](https://github.com/rspatial/raster/issues) on this github site.
+
